<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_background_color"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tvInitialAppTitle"
        style="@style/app_name_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085"
        android:text="@string/app_name"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tvParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/participants"
        android:textSize="@dimen/participants_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInitialAppTitle" />

    <EditText
        android:id="@+id/etParticipantsInput"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/hint_input_participants"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParticipants" />


    <Button
        android:id="@+id/btnStart"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:backgroundTint="@color/background_start_button"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/start_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etParticipantsInput" />

    <TextView
        android:id="@+id/tvTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_bold"
        android:minHeight="48dp"
        android:text="@string/terms_and_conditions_link"
        android:textColor="@color/text_terms_and_conditions"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

</androidx.constraintlayout.widget.ConstraintLayout>